# work-simulator

./: CMakeLists.txt
_Documents/: Materials.xlsx  Products for Project Item.xlsx
include/: Core.h  DataLayer.h  Initialization.h  Machine.h  Marketplace.h  Material.h  Product.h  Production.h  Resource.h  TimeMachine.h  Warehouse.hpp
spike/: materials.ini  products.ini
src/: Core.cpp  DataLayer.cpp  Initialization.cpp  Machine.cpp  Marketplace.cpp  Material.cpp  Product.cpp  Production.cpp  Resource.cpp  TimeMachine.cpp  Warehouse.cpp  main.cpp
test/: Warehouse_old.cpp
